--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       content="Instant access to on-demand compute to scale your most powerful applications. No cumbersome infrastructure development; simply deploy and scale."
     />
     <meta itemprop="image" content="/meta-og-img-2025.png?version=1" />
-    <meta property="og:url" content="https://spheron.network" />
+    <meta property="og:url" content="https://spheronai.network" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="2400" />
     <meta property="og:image:height" content="1260" />
@@ -65,7 +65,7 @@
     <meta name="twitter:image:type" content="image/png" />
     <meta name="twitter:image:width" content="2400" />
     <meta name="twitter:image:height" content="1260" />
-    <link rel="canonical" href="https://spheron.network" />
+    <link rel="canonical" href="https://spheronai.network" />
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:site_name"
